# stock_portfolio_auditor

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  environment.lock.win-64.explicit.txt  environment.lock.win-64.yml  environment.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  parser_failure.md
.github/workflows/: ci.yml  release.yml
data/: manual_overrides.csv
docs/: methodology.md  privacy.md
scripts/: build_env.ps1  build_env.sh  generate_local_report.py  pii_scan.py  run_tests.ps1  run_tests.sh  warm_benchmark_cache.py
src/stock_portfolio_auditor/: __init__.py  cli.py  gui_streamlit.py
src/stock_portfolio_auditor/analytics/: __init__.py  attribution.py  benchmark.py  composite.py  concentration.py  contribution.py  fx_attribution.py  holdings_replay.py  nav.py  option_income.py  pnl_dollar.py  pooled.py  returns.py  risk.py  tcost.py  timing.py  turnover.py
src/stock_portfolio_auditor/data/: __init__.py  sector_crosswalk.py  security_master.py
src/stock_portfolio_auditor/domain/: __init__.py  errors.py  models.py
src/stock_portfolio_auditor/ingestion/: audit_window.py  coverage.py  csv_loader.py  fx_reconstruction.py  html_loader.py  ocr_fallback.py  pdf_loader.py  period_detector.py  persistence.py  pii.py  reconstruct.py
src/stock_portfolio_auditor/parsers/: __init__.py  base.py  detect.py  schwab.py
src/stock_portfolio_auditor/parsers/ibkr/: __init__.py  common.py  csv_parser.py  html_parser.py  pdf_parser.py
src/stock_portfolio_auditor/pricing/: __init__.py  currency_resolver.py  fx_client.py  historical_prices.py  splits.py  ticker_resolver.py
src/stock_portfolio_auditor/pricing/providers/: __init__.py  base.py  cached.py  chain.py  factory.py  frankfurter_provider.py  stooq_provider.py  yfinance_provider.py
src/stock_portfolio_auditor/reporting/: __init__.py  benchmark_data.py  build_pipeline.py  build_report.py  html_report.py  narrative.py  report_schema.py
tests/: factories.py  local_data.py  test_attribution.py  test_audit_window.py  test_benchmark.py  test_build_pipeline.py  test_build_report.py  test_concentration.py  test_contribution.py  test_coverage.py  test_detect.py  test_fx_attribution.py  test_fx_reconstruction.py  test_gui_streamlit.py  test_holdings_models.py  test_holdings_replay.py  test_html_report.py  test_ibkr_csv_parser.py  test_option_income.py  test_parsers_local.py  test_period_detector.py  test_pnl_dollar.py  test_price_provider.py  test_pricing_resolvers.py  test_reconstruct.py  test_report_schema.py  test_returns_twr_mwr.py  test_risk_metrics.py  test_schwab_1099_composite.py  test_schwab_cash_balance.py  test_schwab_external_flow.py  test_schwab_holdings.py  test_schwab_option_transactions.py  test_schwab_realized.py  test_schwab_trading_totals.py  test_security_master.py  test_tcost_ledger.py  test_timing.py  test_turnover.py  test_yearly_turnover_average.py
(+1 files in other folders)
