[build-system]
requires = ["hatchling>=1.29"]
build-backend = "hatchling.build"

[project]
name = "stock-portfolio-auditor"
version = "0.1.0"
description = "Local-first broker statement parser and institutional-style stock portfolio performance auditor."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "ThomasXueeeeee" },
]
keywords = [
  "portfolio",
  "performance",
  "brokerage",
  "audit",
  "twr",
  "mwr",
  "finance",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "beautifulsoup4>=4.14,<5",
  "jinja2>=3,<4",
  "loguru>=0.7,<1",
  "lxml>=6,<7",
  "numpy>=2,<3",
  "pandas>=2.3,<4",
  "pandas-datareader>=0.10,<1",
  "pandas-market-calendars>=5,<6",
  "pdfplumber>=0.11,<1",
  "plotly>=6,<7",
  "pydantic>=2.13,<3",
  "pypdfium2>=5,<6",
  "pytesseract>=0.3,<1",
  "pyxirr>=0.10,<1",
  "scipy>=1.17,<2",
  "streamlit>=1,<2",
  "tomli>=2,<3",
  "typer>=0.25,<1",
  "yfinance>=0.2,<1",
]

[project.optional-dependencies]
dev = [
  "black>=26,<27",
  "hatchling>=1,<2",
  "hypothesis>=6,<7",
  "mypy>=1,<2",
  "pre-commit>=4,<5",
  "pytest>=9,<10",
  "pytest-cov>=7,<8",
  "pytest-snapshot>=0.9,<1",
  "pytest-xdist>=3,<4",
  "reportlab>=3.6,<4",
  "ruff>=0.15,<1",
]
docs = [
  "mkdocs>=1.3,<2",
  "mkdocs-material>=8,<10",
]
gui = [
  "streamlit>=1,<2",
]

[project.urls]
Homepage = "https://github.com/ThomasXueeeeee/stock_portfolio_auditor"
Issues = "https://github.com/ThomasXueeeeee/stock_portfolio_auditor/issues"
Documentation = "https://ThomasXueeeeee.github.io/stock_portfolio_auditor"
Changelog = "https://github.com/ThomasXueeeeee/stock_portfolio_auditor/blob/main/CHANGELOG.md"

[project.scripts]
spa = "stock_portfolio_auditor.cli:app"
stock-portfolio-auditor = "stock_portfolio_auditor.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_portfolio_auditor"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "pandas.*",
  "pandas_datareader.*",
  "plotly.*",
  "pypdfium2.*",
  "pytesseract.*",
  "yfinance.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "local_data: tests that parse user-provided broker statements and are skipped in CI",
]
addopts = "-ra"

[tool.coverage.run]
source = ["stock_portfolio_auditor"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
